[package]
name = "argust"
version = "0.0.1"
edition = "2021"
authors = ["Sidhin S Thomas"]
description = "Simple to use commandline parser for rust programs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ParadoxZero/argust"
keywords = ["commandline", "cmd", "args", "args-parser", "cli"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
